hard-gists/5d7c8763d1345eedee4408e2392bc5e0/run.log
=== Docker Run Log for 5d7c8763d1345eedee4408e2392bc5e0 ===
Started at: Mi 29. Okt 16:15:25 CET 2025

[2025-10-29 16:15:26] START: Running container for 5d7c8763d1345eedee4408e2392bc5e0
[2025-10-29 16:15:26] SUCCESS: Container fc5a9d96769818051acdb8e23a58f2e59dcb40a165759dda6f448729cbe84e07 started for 5d7c8763d1345eedee4408e2392bc5e0
=== Container logs for 5d7c8763d1345eedee4408e2392bc5e0 ===
  File "/snippet.py", line 91
    print result.summary()
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5d7c8763d1345eedee4408e2392bc5e0 ===
[2025-10-29 16:15:28] INFO: Container fc5a9d96769818051acdb8e23a58f2e59dcb40a165759dda6f448729cbe84e07 has stopped
